--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -5,7 +5,7 @@ def sendFailureEmail() {
     def info = 'Check the attached log or log into jenkins'
     emailext(
         mimeType: "text/html; charset=UTF-8",
-        to: "alejandrocalderonvelez@gmail.com",
+        to: "josegar0218@gmail.com",
         recipientProviders: [[$class: 'CulpritsRecipientProvider'], [$class: "RequesterRecipientProvider"]],
         body: "${content}<br/>${info}<br/>",
         subject: "Jenkins: Your build ${env.BRANCH_NAME} - Build #${env.BUILD_NUMBER} - Failed!",
