--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -22,7 +22,7 @@ node() {
         dir("springboot"){
         stage("Test") {
             withMaven(maven: 'maven', jdk: 'jdk') {
-                sh("mvn clean test -U")
+                sh("mvn clean test")
             }
         }
         stage("Build JAR artifact") {
