--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -50,6 +50,7 @@ node() {
         dir("helm"){
         
         stage("Deploy with Helm"){
+            sh("echo $PATH")
             sh("helm install --name jsgd/demoback templates/")
         }
             
