--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -53,7 +53,9 @@ node() {
             sh("pwd")
             sh("ls")
             sh("echo $PATH")
-            sh("helm install jsgd/demoback templates/")
+            sh("helm install --debug --dry-run demoback templates")
+)
+            sh("helm install demoback templates")
         }
             
 
