--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -51,7 +51,7 @@ node() {
         
         stage("Deploy with Helm"){
            
-            sh("helm install demoback templates")
+            sh("helm install demoback .")
         }
             
 
