--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -52,7 +52,9 @@ node() {
         stage("Deploy with Helm"){
             
             sh("echo $HOME")
-            sh("kubectl config view --raw >~/.kube/config")
+            sh("mkdir -p ~/.kube")
+            sh("kubectl config view --raw > ~/.kube/config")
+            sh("export KUBECONFIG=~/.kube/config")
             sh("helm install demoback .")
         }
             
