--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -54,7 +54,7 @@ node() {
             sh("echo $HOME")
             sh("mkdir -p ~/.kube")
             sh("kubectl config view --raw")
-            sh("cp /home/user/.kube/config ~/.kube/config")
+            sh("cp /home/ec2-user/.kube/config ~/.kube/config")
             sh("export KUBECONFIG=~/.kube/config")
             sh("helm install demoback . -v20")
         }
