--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -52,9 +52,8 @@ node() {
         stage("Deploy with Helm"){
             
             sh("echo $HOME")
-            sh("mkdir -p ~/.kube")
             sh("kubectl config view --raw")
-            sh("cp /home/ec2-user/.kube/config ~/.kube/config")
+            sh("cat ~/.kube/config")
             sh("export KUBECONFIG=~/.kube/config")
             sh("helm install demoback . -v20")
         }
