--- a/helm/templates/demobackingress.yaml
+++ b/helm/templates/demobackingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: {{ .Values.ingressname}}
   annotations:
     kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facingspec
+    alb.ingress.kubernetes.io/scheme: internet-facing
+spec:
   rules:
   - http:
       paths:
