--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -56,9 +56,8 @@ node() {
             sh("cat ~/.kube/config")
             sh("export KUBECONFIG=~/.kube/config")
             sh("whoami")
-            sh("sudo su ec2-user")
-            sh("whoami")
-            sh("helm upgrade demoback . -v20")
+            sh("sudo su ec2-user && \  whoami && \ helm upgrade demoback . -v20")
+            
         }
             
 
